[tool.poetry]
name = "plu"
version = "0.1.0"
description = ""
authors = ["Eelco Wesemann <6771014+sgaduuw@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
SQLAlchemy = "^2.0.23"
alembic = "^1.12.1"
passlib = "^1.7.4"
textual = "^0.43.2"


[tool.poetry.group.dev.dependencies]
pylint = "^3.0.2"
black = "^23.11.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
